correction contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -120,7 +120,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
 	color: #fff;
-	background-color: #7c7331;
+	background-color: #404040;
 	border-radius: 0;
 }
 
